# Nalanda

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.example.yml  config.schema.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker-publish.yml  release.yml
docker/: compose.example.yml
nalanda/: __init__.py  __main__.py  _servarr_sync.py  art_select.py  artwork.py  bootstrap.py  builders.py  cache.py  collection.py  config.py  http.py  language.py  logging.py  matching.py  metadata.py  models.py  radarr_sync.py  reconcile.py  server.py  sonarr_sync.py  sorting.py  state.py  tagging.py
nalanda/clients/: __init__.py  _servarr.py  jellyfin.py  mdblist.py  radarr.py  sonarr.py  tmdb.py  tvdb.py
nalanda/templates/: __init__.py  config.starter.yml  env.starter
scripts/: encode_tvdb_key.py
tests/: test_arr_cache.py  test_art_select.py  test_artwork.py  test_bootstrap.py  test_builders.py  test_builders_cache.py  test_builders_mixed.py  test_builders_tv.py  test_cache.py  test_cli_dispatch.py  test_client_cache.py  test_foundation.py  test_jellyfin.py  test_language.py  test_mdblist.py  test_metadata.py  test_radarr.py  test_radarr_client.py  test_radarr_sync.py  test_reconcile.py  test_servarr_client.py  test_servarr_sync.py  test_server.py  test_sonarr_client.py  test_sonarr_sync.py  test_sorting.py  test_state.py  test_tmdb_images.py  test_tvdb.py
